Adjusted the width of the cards to fix sizing issue on mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,9 +37,7 @@ header h1{
 }
 
 .container{
-  padding-top: 25px;
-  padding-bottom: 25px;
-  /* padding-left:0; */
+  padding: 25px 0;
   margin: 0 auto;
 }
 #game {
